--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -20,7 +20,12 @@ body {
 	padding: 0;
 	word-wrap: break-word;
         background: url('../../img/bg.jpg') no-repeat 100%;
-	/*http://lea.verou.me/css3patterns/#carbon-fibre*/
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
 }
 
 ul {
