--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -26,6 +26,7 @@ body {
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
+        overflow:hidden;
 }
 
 ul {
