--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -22,19 +22,19 @@
                 </p>
             </div>
             <div class="guestBox" id="clearBox">
-                <div class="image"><img src="gfx/guest/guest_01.png" style="width: 153px"/></div>
+                <div class="image"><img src="gfx/guest/guest_01.svg" style="height: 100px;margin-top: 15px;"/></div>
                 <p>save, organize and share your files</p>
             </div>
             <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_02.png" style="width: 125px"/></div>
+                <div class="image"><img src="gfx/guest/guest_02.svg" style="height: 100px;margin-top: 15px;"/></div>
                 <p>use public files and make your files accesible</p>
             </div>
             <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_03.png" style="width: 159px; width: 159px; margin-top: 12px;"/></div>
+                <div class="image"><img src="gfx/guest/guest_03.svg" style="height: 100px;margin-top: 15px;"/></div>
                 <p>present yourself and stay in touch with your buddies</p>
             </div>
             <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_04.png" style="width: 169px"/></div>
+                <div class="image"><img src="gfx/guest/guest_04.svg" style="height: 100px;margin-top: 15px;"/></div>
                 <p>encrypt your data and communication</p>
             </div>
         </div>
