--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -388,6 +388,18 @@ li.notHidden{
     color: #C6C6C6;
 }
 
+.gui_form_table{
+    width: 100%;
+}
+
+.gui_form_table{
+    width: 100%;
+    height: 40px;
+    padding: 7px;
+    font-size: 16px;
+    color: #313131;
+}
+
 .formTable{
 	margin-top: 20px;
 }
@@ -417,7 +429,7 @@ li.notHidden{
     position: absolute;
     z-index: 99999;
     overflow: auto;
-    top: 100px;
+    top: 70px;
     left: 50%;
     background-color:  #607d8b;
     box-shadow: 1px 3px 8px 0px rgba(0, 0, 0, 0.3);
@@ -427,10 +439,12 @@ li.notHidden{
 }
 
 .blueModal > header{
-	height: 30px;
-	font-size: 20pt;
-	margin: 10px;
-	margin-bottom: 0px;
+    height: 50px;
+    font-size: 24px;
+    margin: 0 -15px;
+    padding: 15px;
+    border-bottom: 1px solid #dcdcdc;
+    margin-bottom: 10px;
 }
     
     .blueModal > header .modalClose{
@@ -439,15 +453,14 @@ li.notHidden{
         top: 10px;
         right: 10px;
         color: #FFF;
-		z-index: 1;
+	z-index: 1;
     }
 
 .blueModal > .content{
-	max-height: 550px;
-	margin: 0px 5px;
+	max-height: 450px;
 	overflow: auto;
-	
 }
+
 .blueModal > footer{
 	height: 30px;
 	margin: 5px 5px 0px 5px;
@@ -2101,12 +2114,13 @@ line-height: 14px;
 }
 
 .miniFileBrowser{
-	border: 1px solid #474545;
+    color:  #313131;
 }
 
 .miniFileBrowser li{
-	line-height:25pt;
-	clear:both;
+    height:40px;
+    line-height:25pt;
+    clear:both;
 }
 
 .miniFileBrowser img{
@@ -2841,13 +2855,13 @@ margin: 0;
 				.privacySettings h2{
 					line-height: 23px;
 					font-size: 20px;
+                                        display: inline-block;
 				}
 				
 				.privacySettings > header{
 					position: relative;
 					font-size: 20px;
 					line-height: 30px;
-					padding: 5px;
                                         color:#FFF;
                                 }
 				
@@ -2855,18 +2869,32 @@ margin: 0;
 				}
 				
  				.privacySettings>ul>li{
- 					margin-top: 5px;
- 					padding: 5px;
- 					padding-left: 20px;
- 					clear:both;
-                                        width: 360px;
- 					color: #313131;
-                                        background-color:  #ffffff;
+                                    margin-top: 5px;
+                                    padding: 5px;
+                                    padding-left: 35px;
+                                    clear: both;
+                                    height: 40px;
+                                    line-height: 36px;
+                                    color: #313131;
+                                    background-color: #ffffff;
  				}
                                 
+                                .privacySettings>ul>li .white-check{
+                                    display:none;
+                                }
                                 
  				.privacySettings>ul>li.active{
-                                    backgroundColor: red;
+                                    background-color:  #00bcd4;
+                                    color:#FFF;
+                                    padding-left: 2px;
+                                }
+                                
+                                .privacySettings>ul>li.active .white-check{
+                                    display: inline-block;
+                                    margin-right: 2px;
+                                    height: 30px;
+                                    width: 30px;
+                                    margin-bottom: -8px;
                                 }
                                 
                                 .privacySettings h2 input[type=checkbox]{
@@ -2880,13 +2908,13 @@ margin: 0;
  				
  				.privacySettings .sub{
  					margin-left: 25px;
-                                        width: 330px;
  					border-top: none;
  					display:none;
+                                        height: auto;
  				}
  				
  				.privacySettings .sub > div{
- 					width: 150px;
+                                        width:45%;
                                         height: 25px;
                                         font-size: 18px;
                                         display: inline-block;
@@ -2903,8 +2931,7 @@ margin: 0;
  				
  				.privacySettings .groupList li > div:first-of-type{
  					margin-left: 0;
- 					width: 120px; 
-                                        overflow-x: hidden;
+ 					width: 120px;
  				}
  				
  				.privacySettings .groupList li > div{
