--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2121,9 +2121,16 @@ line-height: 14px;
 
 .miniFileBrowser li{
     height:40px;
-    line-height:25pt;
+    line-height: 40px;
     clear:both;
+    background:#eceff1;
 }
+
+    .miniFileBrowser .strippedRow{border: none;}
+	.miniFileBrowser .strippedRow:first-child {background:rgb(255, 255, 255)}
+	.miniFileBrowser .strippedRow:nth-child(2n+3)  {background:rgb(255, 255, 255)}
+
+
 
 .miniFileBrowser img{
 height: 20px;
