new forms finished guestpage login form design updated doit.php unnecessary actions Remonde small fixes

--- a/inc/css/guest.css
+++ b/inc/css/guest.css
@@ -91,35 +91,21 @@
 	    position: absolute;
 	    bottom: 40px;
 	    left: 0px;
-	    height: 150px;
-	    background: #3a3a3a; /* Old browsers */
-		background: -moz-linear-gradient(top, #3a3a3a 0%, #303030 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3a3a3a), color-stop(100%,#303030)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #3a3a3a 0%,#303030 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #3a3a3a 0%,#303030 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, #3a3a3a 0%,#303030 100%); /* IE10+ */
-		background: linear-gradient(to bottom, #3a3a3a 0%,#303030 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a3a3a', endColorstr='#303030',GradientType=0 ); /* IE6-9 */
+            background-color: #607d8b;
+            box-shadow: 1px 3px 8px 0px rgba(0, 0, 0, 0.3);
+            width: 360px;
+            height: 190px;
+            padding: 20px;
 }
 
-#startMainWindow {
-	    height: 150px;
-	    overflow: none;
-}
-
-#startMainHeader{
-	    height:30px;
-	    width: 460px;
-	    border-bottom:2px solid #3a3a3a;
-	    color: #FFF;
-	    padding-top: 10px;background: rgb(38,38,38); /* Old browsers */
-		background: -moz-linear-gradient(top, rgba(38,38,38,1) 0%, rgba(40,40,40,1) 49%, rgba(40,40,40,1) 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(38,38,38,1)), color-stop(49%,rgba(40,40,40,1)), color-stop(100%,rgba(40,40,40,1))); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* IE10+ */
-		background: linear-gradient(to bottom, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#262626', endColorstr='#282828',GradientType=0 ); /* IE6-9 */
+#startbox input[type=text],#startbox input[type=password]{
+    width: 100%;
+    height: 40px;
+    padding: 7px;
+    font-size: 16px;
+    color: #313131;
+    margin-bottom: 15px;
+    border: none;
 }
 
 .border-radius {
