--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -40,8 +40,8 @@ a{
     color: #313131;
 }
 
-.strippedRow{
-	border-bottom:1px solid #e9e9e9;
+a:hover, a:focus{
+    text-decoration:none;
 }
 h3{
     font-size: 13pt;
@@ -400,6 +400,11 @@ li.notHidden{
     color: #313131;
     margin-bottom: 15px;
     border: none;
+}
+
+.gui_form_table .caption{
+    font-size: 20px;
+    padding-bottom: 10px;
 }
 
 .formTable{
@@ -2132,8 +2137,9 @@ line-height: 14px;
 
 
 
-.miniFileBrowser img{
+.miniFileBrowser .icon{
 height: 20px;
+width: 20px;
 margin-bottom: -5px;
 }
 
@@ -2150,8 +2156,12 @@ margin-bottom: -5px;
 	display:none;
 	font-size: 12pt;
 	margin: 10px;
+        padding-left: 12px;
 	cursor:pointer;
-	color: #0088cc;
+}
+
+.miniFileBrowser .change a{
+    
 }
 
 .miniFileBrowser .trigger{
@@ -2887,6 +2897,7 @@ margin: 0;
                                     color: #313131;
                                     background-color: #ffffff;
                                     margin-bottom: 5px;
+                                    cursor: pointer;
  				}
                                 
                                 .privacySettings>ul>li .white-check{
@@ -3402,6 +3413,7 @@ and (max-width : 320px) {
     padding: 7px 0;
     text-align: center;
     font-size:16px;
+border: none;
 }
 
 .antiButton{
@@ -3415,7 +3427,7 @@ and (max-width : 320px) {
     font-size:16px;
 }
 
-.antiButton:hover,.button:hover{
+.antiButton:hover,.button:hover, .antiButton:focus,.button:focus, .antiButton:visited,.button:visited{
     color:#FFF;
 }
 
