--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -17,25 +17,14 @@
                     </form>
                 </div>
                 <img src="gfx/loading-bubbles.svg" width="150" height="150">
-                <p>
-                    Lorem Ipsum Supidubu bbaskd jaskaj sdfakshkgjsfdbsnk
-                </p>
             </div>
             <div class="guestBox" id="clearBox">
-                <div class="image"><img src="gfx/guest/guest_01.svg" style="height: 100px;margin-top: 15px;"/></div>
-                <p>save, organize and share your files</p>
-            </div>
-            <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_02.svg" style="height: 100px;margin-top: 15px;"/></div>
-                <p>use public files and make your files accesible</p>
-            </div>
-            <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_03.svg" style="height: 100px;margin-top: 15px;"/></div>
-                <p>present yourself and stay in touch with your buddies</p>
-            </div>
-            <div class="guestBox">
-                <div class="image"><img src="gfx/guest/guest_04.svg" style="height: 100px;margin-top: 15px;"/></div>
-                <p>encrypt your data and communication</p>
+                <ul>
+                    <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
+                    <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
+                    <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
+                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accesible</span></li>
+                </ul>
             </div>
         </div>
         
